# SituationalDisplay

./: CMakeLists.txt  README.md
Display/: Display.php  Leaflet.PolylineMeasure.js  Tooltip.Drag.js  Tooltip.js  clientPHP.php  setMap.html  testcanvas.html  testcanvas.js  testing.php
Display/Plugin License/: Leaflet.PolylineMeasure
src/TestEnviroment/: Display.cpp  Display.h  Enviroment.h  Exception.cpp  PlaneData.cpp  PlaneData.h  PlaneManager.cpp  PlaneManager.h  SendData.cpp  SendData.h  ServerMessageEm.cpp  ServerMessageEm.h  SpriteRender.cpp  TcpSocket.h  main.cpp
src/client/: Enviroment.cpp  Enviroment.h  Exception.h  PlaneData.cpp  PlaneData.h  PlaneManager.cpp  PlaneManager.cpp.autosave  PlaneManager.h  SendData.cpp  SendData.h  SpriteRender.h  TcpSocket.cpp  TcpSocket.h  main.cpp
src/inc/: util.cpp  util.h
